[package]
name = "lambert"
version = "1.0.0"
authors = ["Heinrich, Yannick <yannick.heinrich@gmail.com>"]

description = "lamber-rust is a crate helping to convert Lambert coordinates to WGS84"

homepage = "https://github.com/yageek/lambert-rust"
repository = "https://github.com/yageek/lambert-rust.git"
keywords = ["lambert-rust", "wgs84", "gps"]
license = "MIT"
